--- a/BackEnd/api-gateway/src/main/resources/application.properties
+++ b/BackEnd/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=api-gateway
 server.port=8080
 
-# CONFIGURACIÓN DE RUTAS (El corazón del Gateway)
-# Cuando alguien entre a localhost:8080/api/auth, el Gateway lo mandará al puerto 8081
+# Rutas del Gateway
 spring.cloud.gateway.routes[0].id=auth-service
 spring.cloud.gateway.routes[0].uri=http://localhost:8081
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**
