Imprementar fichas-service completo

--- a/BackEnd/pacientes-service/src/main/resources/application.properties
+++ b/BackEnd/pacientes-service/src/main/resources/application.properties
@@ -1,29 +1,18 @@
 # 1. NOMBRE Y PUERTO DEL SERVICIO
-# Es vital que corra en el 8081 porque el 8080 suele usarlo el Gateway u otro servicio.
 spring.application.name=pacientes-service
 server.port=8081
 
-# 2. CONEXIÓN A LA BASE DE DATOS (PostgreSQL)
-# Como estás corriendo el Java desde tu IDE (fuera de Docker) pero la BD está en Docker,
-# usamos "localhost".
+# 2. CONEXION A LA BASE DE DATOS (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5433/odontologia_db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# 3. CONFIGURACIÓN DE JPA / HIBERNATE (El traductor Java <-> SQL)
-# "update": Crea las tablas automáticamente si no existen.
+# 3. CONFIGURACION DE JPA / HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
-
-# "true": Muestra las consultas SQL en la consola (¡Muy útil para aprender!)
 spring.jpa.show-sql=true
-
-# Formatea el SQL para que sea legible
 spring.jpa.properties.hibernate.format_sql=true
-
-# Dialecto específico de Postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# 4. SOLUCIÓN DE ERRORES COMUNES (Opcional pero recomendado)
-# Esto permite que Hibernate maneje bien las conexiones sin cerrarse inesperadamente
+# 4. CONFIGURACION ADICIONAL
 spring.jpa.open-in-view=true
