--- a/BackEnd/fichas-service/src/main/resources/application.properties
+++ b/BackEnd/fichas-service/src/main/resources/application.properties
@@ -1,33 +1,27 @@
 # ============================================
-# CONFIGURACIÓN DEL SERVICIO DE FICHAS TÉCNICAS
+# CONFIGURACION DEL SERVICIO DE FICHAS TECNICAS
 # ============================================
 
 # 1. NOMBRE Y PUERTO DEL SERVICIO
+# OJO ARQUITECTO: Puerto 8083 para no chocar con Pacientes (8082) ni Auth (8081)
 spring.application.name=fichas-service
-server.port=8082
+server.port=8083
 
-# 2. CONEXIÓN A LA BASE DE DATOS (PostgreSQL en Docker)
-spring.datasource.url=jdbc:postgresql://localhost:5433/odontologia_db
+# 2. CONEXION A LA BASE DE DATOS (PostgreSQL en Docker)
+# Usamos el puerto 5432 que definimos en tu Docker Compose
+spring.datasource.url=jdbc:postgresql://localhost:5432/odontologia_db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# 3. CONFIGURACIÓN DE JPA / HIBERNATE
-# "update": Crea las tablas automáticamente si no existen
+# 3. CONFIGURACION DE JPA / HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
-
-# Muestra las consultas SQL en la consola (útil para debugging)
 spring.jpa.show-sql=true
-
-# Formatea el SQL para que sea legible
 spring.jpa.properties.hibernate.format_sql=true
-
-# Dialecto específico de PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# 4. CONFIGURACIÓN DE OPEN-IN-VIEW
+# 4. CONFIGURACION EXTRA
 spring.jpa.open-in-view=true
 
-# 5. CONFIGURACIÓN DE LOGS
+# Logs limpios
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
