--- a/BackEnd/pacientes-service/src/main/resources/application.properties
+++ b/BackEnd/pacientes-service/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 # 1. NOMBRE Y PUERTO DEL SERVICIO
 spring.application.name=pacientes-service
-server.port=8081
+# IMPORTANTE: Usamos 8082 porque el 8081 es de Auth y el 8080 del Gateway
+server.port=8082
 
-# 2. CONEXION A LA BASE DE DATOS (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://localhost:5433/odontologia_db
+# 2. CONEXION A LA BASE DE DATOS (PostgreSQL Docker)
+spring.datasource.url=jdbc:postgresql://localhost:5432/odontologia_db
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# 3. CONFIGURACION DE JPA / HIBERNATE
+# 3. CONFIGURACION JPA / HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# 4. CONFIGURACION ADICIONAL
 spring.jpa.open-in-view=true
