Odontograma: BackEnd, FrontEnd, BD

--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # 1. NOMBRE Y PUERTO DEL SERVICIO
-spring.application.name=pacientes-service
-# IMPORTANTE: Usamos 8082 porque el 8081 es de Auth y el 8080 del Gateway
-server.port=8082
+spring.application.name=odontograma-service
+server.port=8084
 
 # 2. CONEXION A LA BASE DE DATOS (PostgreSQL Docker)
 spring.datasource.url=jdbc:postgresql://localhost:5433/odontologia_db
