--- a/BackEnd/pacientes-service/src/main/resources/application.properties
+++ b/BackEnd/pacientes-service/src/main/resources/application.properties
@@ -9,9 +9,17 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# 2.1 INICIALIZACIÓN DE SCHEMA SQL
+spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
+
 # 3. CONFIGURACION JPA / HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=true
+
+# 4. LOGGING
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.data.jpa=DEBUG
